BJS2-26457 Добавил валидатор при отправке приглашения. Упростил код